# Recreito

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: OpenGLApp.cpp  OpenGLApp.h  OpenGLInfo.h  Recreito.cpp  Recreito.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  ShaderLoader.cpp  ShaderLoader.h  ShaderMgr.cpp  ShaderMgr.h  main.cpp  simple.frag  simple.vert
src/Core/: Cube.cpp  Cube.h  GameObject.cpp  GameObject.h  Plane.cpp  Plane.h  Scene.cpp  Scene.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/Mgrs/: ShaderMgr.cpp  ShaderMgr.h
src/Rendering/: Camera.cpp  Camera.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h  OpenGLInfo.h  Renderer.cpp  Renderer.h  RenderingComponent.cpp  RenderingComponent.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
src/core/: GameObject.cpp  GameObject.h  InputManager.cpp  InputManager.h  Scene.cpp  Scene.h
src/gameobjects/: Camera.cpp  Camera.h
src/shaders/: 3D_Vertex_Shader.glsl  3d.v.glsl  3d.vert  Fragment_Shader.glsl  Simple_Fragment_Shader.glsl  Vertex_Shader.glsl  color.frag  color_light.f.glsl  color_light.frag
src/systems/behavior/: BehaviorComponent.cpp  BehaviorComponent.h  BehaviorSystem.cpp  BehaviorSystem.h
src/systems/rendering/: Light.cpp  Light.h  Renderer.cpp  Renderer.h  RenderingComponent.cpp  RenderingComponent.h  Texture.cpp
src/systems/rendering/models/: Mesh.cpp  Model.cpp  Model.h  ModelFactory.cpp  ModelFactory.h
src/systems/rendering/shaders/: 2d.vert  3d.vert  Shader.cpp  ShaderMgr.cpp  ShaderMgr.h  color.frag
utils/: installSDL2.sh
